syntax="proto3";

import "error.proto";

package pbgame;

service DB {
    rpc LoadPlayer(LoadRequest) returns (LoadResponse) {}
    rpc SavePlayer(SaveRequest) returns (SaveResponse) {}
    rpc CreatePlayer(CreatePlayerRequest) returns (CreatePlayerResponse) {}
}

message LoadRequest{
    string account = 1;
}

message LoadResponse{
    ErrorCode result = 1;
    uint32 uid = 2;
    string name = 3;
    int32 money = 4;
}

message SaveRequest {
    string account = 1;
    uint32 uid = 2;
    string name = 3;
    int32 money = 4;
}

message SaveResponse {
    ErrorCode result = 1;
}

message CreatePlayerRequest{
    string account = 1;
    string name = 2;
    int32 money = 3;
}

message CreatePlayerResponse {
    ErrorCode result = 1;
    uint32 uid = 2;
}